test/ill-formed/0078_foward_decl_struct_in_param_with_prototype.c
struct s;
void f (struct s *);
struct s {
  int *p; /* Note in the future we can't immediately reject this definition
           * because might not be used in PENCIL functions/regions.  */
};
void f (struct s *x)
{
  x->p = 0;
}
